Fixing colour of dark mode tag separator

--- a/src/assets/style/articlePreviews.scss
+++ b/src/assets/style/articlePreviews.scss
@@ -54,6 +54,10 @@
     
     .separator {
         color: $theme-color;
+
+        .dark-theme & {
+            color: rgb(185, 216, 192);
+        }
     }
 
     .description {
