--- a/src/assets/style/blogPost.scss
+++ b/src/assets/style/blogPost.scss
@@ -39,6 +39,10 @@
 
         .separator {
             color: $theme-color;
+
+            .dark-theme & {
+                color: rgb(185, 216, 192);
+            }
         }
     
     }
